fix: 🐛 update @z-index*

--- a/resources/mediawiki.less/mediawiki.skin.variables.less
+++ b/resources/mediawiki.less/mediawiki.skin.variables.less
@@ -29,8 +29,8 @@
 
 @z-index-bottom: -100;
 @z-index-base: 0;
-@z-index-above-content: 1;
-@z-index-toolbar: 2;
+@z-index-above-content: 2;
+@z-index-toolbar: 3;
 @z-index-dropdown: 50;
 @z-index-sticky: 100;
 @z-index-fixed: 200;
